# OpenCLDemo_Android

./: README.md  gradle.properties
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/ai/momocv/opencldemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: HelloWorld.cl  OpenCLWrapper.cpp  OpenCLWrapper.h  native-lib.cpp
app/src/main/cpp/include/opencl/include/CL/: cl2.hpp
app/src/main/java/com/ai/momocv/opencldemo/: MainActivity.java
app/src/test/java/com/ai/momocv/opencldemo/: ExampleUnitTest.java
